Make tools fail if they connect to a db requiring authentication but don't supply any credentials: SERVER-2867